# moaray

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN-P3-3.md  DESIGN.md  Dockerfile  README.md  RELEASE.md  config.example.yaml  docker-compose.yml
.claude/commands/: octospec-check.md
.claude/skills/octospec-init/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.octospec/: .gitignore  log.md  manifest.yaml
.octospec/.claude/commands/: octospec-finish.md  octospec-go.md  octospec-plan.md
.octospec/.claude/skills/octospec-workflow/: SKILL.md
.octospec/journal/shared/: phase1-mvp-core.md  phase2-moa-orchestration.md  phase3-hardening.md  phase3-hot-reload.md  v0.2-usage-accounting.md  v0.2.0-release.md
.octospec/learnings/pending/: state-key-vs-observability-id.md  test-injection-seam-prevents-vacuous-gates.md
.octospec/rules/: _index.yaml  error-envelope.md  moa-partial-failure.md  no-secret-logging.md  streaming-passthrough.md
.octospec/scripts/: octospec-lint.py  octospec-lint.sh  octospec-sync.sh  octospec_sync_block.py
.octospec/tasks/: _brief.template.md
.octospec/tasks/phase1-mvp-core/: brief.md
.octospec/tasks/phase2-moa-orchestration/: brief.md
.octospec/tasks/phase3-hardening/: brief.md
.octospec/tasks/phase3-hot-reload/: brief.md
.octospec/tasks/v0.2-usage-accounting/: brief.md
.octospec/tasks/v0.2.0-release/: brief.md
crates/moaray/: Cargo.toml
crates/moaray-config/: Cargo.toml
crates/moaray-config/src/: error.rs  lib.rs  runtime.rs  schema.rs  validate.rs
crates/moaray-core/: Cargo.toml
crates/moaray-core/src/: error.rs  lib.rs  provider.rs  router.rs  types.rs  usage.rs
crates/moaray-moa/: Cargo.toml
crates/moaray-moa/src/: lib.rs  orchestrator.rs  recipe.rs  strategy.rs
crates/moaray-moa/tests/: trace.rs
crates/moaray-providers/: Cargo.toml
crates/moaray-providers/src/: anthropic.rs  anthropic_map.rs  anthropic_sse.rs  client.rs  common.rs  lib.rs  openai.rs
crates/moaray-providers/tests/: anthropic.rs  openai.rs
crates/moaray-store/: Cargo.toml
crates/moaray-store/src/: lib.rs
crates/moaray/src/: app.rs  auth.rs  breaker.rs  governed.rs  http_error.rs  lib.rs  limit.rs  main.rs  observe.rs  registry.rs  reload.rs  runtime.rs
crates/moaray/tests/: accounting.rs  gateway.rs  hardening.rs  hot_reload.rs  moa.rs  redaction.rs
docs/: DEPLOY.md
scripts/: load-smoke.sh  payload.json
tools/mock-upstream/: Cargo.toml
tools/mock-upstream/src/: main.rs
