[workspace]
resolver = "2"
members = [
    "crates/moaray",
    "crates/moaray-core",
    "crates/moaray-providers",
    "crates/moaray-moa",
    "crates/moaray-config",
    "crates/moaray-store",
    "tools/mock-upstream",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/moaray/moaray"
rust-version = "1.83"

[workspace.dependencies]
# Async runtime + HTTP server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["timeout", "limit", "util"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
hyper = { version = "1", features = ["full"] }

# Upstream HTTP client (streaming)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Streaming utils
bytes = "1"
futures = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
async-stream = "0.3"

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Config / hot-reload primitives
arc-swap = "1"
# Concurrent map for the reload-surviving per-upstream state (in-place insert/GC
# while requests are in flight).
dashmap = "6"

# Rate limiting (per-key + per-upstream token buckets)
governor = "0.10"

# Misc
uuid = { version = "1", features = ["v4"] }
url = "2"

# Persistent usage store (v0.2-P1): bundled SQLite (compiles from C source so the
# release image needs only a C toolchain — see DP1) + a lock-free bounded channel
# for the hot-path try_send to the dedicated OS-thread writer.
rusqlite = { version = "0.32", features = ["bundled"] }
crossbeam-channel = "0.5"

# Test deps
wiremock = "0.6"
