[package]
name = "moaray-moa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
moaray-core = { path = "../moaray-core" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
bytes.workspace = true
tracing-subscriber = { workspace = true }
