[package]
name = "moaray-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
moaray-core = { path = "../moaray-core" }
rusqlite.workspace = true
crossbeam-channel.workspace = true
metrics.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
